old slurm/slurm-5376.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
include/f/cuda_pattern/cuda_pattern.hpp:19:132: error: unknown type name 'stdLLvector'
                                  unsigned long column_index, double2* cuda_cache, unsigned long tilt_size, unsigned long max_dim, stdLLvector<unsigned long> per_tilt_dim_vector, double per_tilt_dim_cache );  
                                                                                                                                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
/var/spool/slurmd/job05376/slurm_script: line 16: ./direct_cuda_pattern: No such file or directory

real	0m0.004s
user	0m0.000s
sys	0m0.000s
